[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Primary/Interface/MovementWindow/Body.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Primary/Interface/MovementWindow/Movement Window.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Primary/Interface/MovementWindow/CombatMenu/CombatMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Primary/Interface/MovementWindow/WindowMover.gd" type="Script" id=6]
[ext_resource path="res://Assets/Window Sprites/WindowButtons.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Primary/Interface/MovementWindow/CombatMenu/AttackButton.gd" type="Script" id=11]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 70, 35, 35 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 35, 70, 35, 35 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 0, 70, 35, 35 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 35, 70, 35, 35 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 0, 35, 35, 35 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 35, 35, 35, 35 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 35, 35 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 35, 0, 35, 35 )

[node name="Window" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 32
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Control" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 32.0
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource( 6 )
window_path = NodePath("../..")

[node name="Outline" type="ColorRect" parent="VSplitContainer/TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.235294, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="ColorRect" parent="VSplitContainer/TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1
color = Color( 0.596078, 0.596078, 0.596078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="TextureButton" parent="VSplitContainer/TopBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_right = -35.0
mouse_default_cursor_shape = 2
texture_normal = SubResource( 3 )
texture_disabled = SubResource( 4 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
attack_button = SubResource( 5 )
attack_button_disabled = SubResource( 6 )
back_button = SubResource( 7 )
back_button_disables = SubResource( 8 )

[node name="Close" type="TextureButton" parent="VSplitContainer/TopBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -35.0
mouse_default_cursor_shape = 2
texture_normal = SubResource( 1 )
texture_disabled = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Control" parent="VSplitContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Outline" type="ColorRect" parent="VSplitContainer/Body"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.235294, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Movement" parent="VSplitContainer/Body" instance=ExtResource( 1 )]
margin_left = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="CombatMenu" parent="VSplitContainer/Body" instance=ExtResource( 3 )]
visible = false
margin_left = 5.0
margin_right = -5.0
margin_bottom = -5.0

[connection signal="accepted_window_movement" from="VSplitContainer/TopBar" to="." method="_on_TopBar_accepted_window_movement"]
[connection signal="mouse_entered" from="VSplitContainer/TopBar" to="VSplitContainer/TopBar" method="_on_TopBar_mouse_entered"]
[connection signal="mouse_exited" from="VSplitContainer/TopBar" to="VSplitContainer/TopBar" method="_on_TopBar_mouse_exited"]
[connection signal="attack" from="VSplitContainer/TopBar/Attack" to="." method="_on_Attack_attack" flags=3]
[connection signal="back" from="VSplitContainer/TopBar/Attack" to="." method="_on_Attack_back" flags=3]
[connection signal="pressed" from="VSplitContainer/TopBar/Attack" to="VSplitContainer/TopBar/Attack" method="_on_Attack_pressed"]
[connection signal="pressed" from="VSplitContainer/TopBar/Close" to="." method="_on_Close_pressed"]
[connection signal="mouse_entered" from="VSplitContainer/Body" to="." method="_on_Window_focus_entered"]
[connection signal="mouse_exited" from="VSplitContainer/Body" to="." method="_on_Window_focus_exited"]
[connection signal="attack_selected" from="VSplitContainer/Body/CombatMenu" to="." method="_on_CombatMenu_attack_selected"]
[connection signal="requesting_close" from="VSplitContainer/Body/CombatMenu" to="VSplitContainer/TopBar/Attack" method="_on_CombatMenu_requesting_close"]
